All labels and markings selectable. Text information displays in bottom description panel.

--- a/src/app/ui/views/view-dcv/control-factors/control-factors.component.html
+++ b/src/app/ui/views/view-dcv/control-factors/control-factors.component.html
@@ -11,7 +11,8 @@
   <!-- INOP ENGINE -->
   <div class="row mb-auto align-items-center">
     <div class="col-4">
-      <h5 class="text-center">INOP. ENGINE</h5>
+      <app-selectable-label label="INOP. ENGINE" lookupValue="inop-engine" (contentClicked)="labelSelected($event)"></app-selectable-label>
+      <!-- <h5 class="text-center" (click)="contentSelected($event)">INOP. ENGINE</h5> -->
     </div>
     <div class="col-8">
       <app-selector label="INOP. ENGINE" [useValue]="true" [toggleOptions]="['LEFT','RIGHT']" [initialValue]="0"
@@ -22,7 +23,7 @@
   <!-- POWER -->
   <div class="row align-items-center">
     <div class="col-4">
-      <h5 class="text-center">POWER</h5>
+      <app-selectable-label label="POWER" lookupValue="power" (contentClicked)="labelSelected($event)"></app-selectable-label>
     </div>
     <div class="col-8">
       <div *ngIf="!disablePower; else disable">
@@ -39,7 +40,7 @@
   <!-- DENSITY ALTITUDE -->
   <div class="row align-items-center">
     <div class="col-4">
-      <h5 class="text-center">DENSITY ALTITUDE</h5>
+      <app-selectable-label label="DENSITY ALTITUDE" lookupValue="density-altitude" (contentClicked)="labelSelected($event)"></app-selectable-label>
     </div>
     <div class="col-8">
       <app-selector label="DENSITY ALTITUDE" [useValue]="false" [toggleOptions]="['0','1500','3000','4500','6000']"
@@ -50,7 +51,7 @@
   <!-- PROPELLER -->
   <div class="row align-items-center">
     <div class="col-4">
-      <h5 class="text-center">PROPELLER</h5>
+      <app-selectable-label label="PROPELLER" lookupValue="propeller" (contentClicked)="labelSelected($event)"></app-selectable-label>
     </div>
     <div class="col-8">
       <app-selector label="PROPELLER" [useValue]="true" [toggleOptions]="['WINDMILL','FEATHER']" [initialValue]="0"
@@ -61,7 +62,7 @@
   <!-- CONTROL TECHNIQUE -->
   <div class="row align-items-center">
     <div class="col-4">
-      <h5 class="text-center">CONTROL TECHNIQUE</h5>
+      <app-selectable-label label="CONTROL TECHNIQUE" lookupValue="control-technique" (contentClicked)="labelSelected($event)"></app-selectable-label>
     </div>
     <div class="col-8">
       <app-selector label="CONTROL TECHNIQUE" [useValue]="true" [toggleOptions]="['WINGS LEVEL','ZERO SIDE SLIP']"
@@ -72,7 +73,7 @@
   <!-- AIRSPEED (KIAS) -->
   <div class="row align-items-center">
     <div class="col-4">
-      <h5 class="text-center">AIRSPEED (KIAS)</h5>
+      <app-selectable-label label="AIRSPEED (KIAS)" lookupValue="airspeed" (contentClicked)="labelSelected($event)"></app-selectable-label>
     </div>
     <div class="col-8">
       <app-selector label="AIRSPEED (KIAS)" [useValue]="false" [toggleOptions]="['83','-','88','-','93']"
@@ -83,7 +84,7 @@
   <!-- WEIGHT -->
   <div class="row align-items-center">
     <div class="col-4">
-      <h5 class="text-center">WEIGHT</h5>
+      <app-selectable-label label="WEIGHT" lookupValue="weight" (contentClicked)="labelSelected($event)"></app-selectable-label>
     </div>
     <div class="col-8">
       <app-selector label="WEIGHT" [useValue]="false" [toggleOptions]="['MIN','-','-','-','MAX']" [initialValue]="0"
@@ -94,7 +95,7 @@
   <!-- CENTER OF GRAVTY -->
   <div class="row align-items-center">
     <div class="col-4">
-      <h5 class="text-center">CENTER OF GRAVITY</h5>
+      <app-selectable-label label="CENTER OF GRAVITY" lookupValue="cog" (contentClicked)="labelSelected($event)"></app-selectable-label>
     </div>
     <div class="col-8">
       <app-selector label="CENTER OF GRAVITY" [useValue]="false" [toggleOptions]="['AFT','-','-','-','FORE']"
@@ -105,7 +106,7 @@
   <!-- FLAPS -->
   <div class="row align-items-center">
     <div class="col-4">
-      <h5 class="text-center">FLAPS</h5>
+      <app-selectable-label label="FLAPS" lookupValue="flaps" (contentClicked)="labelSelected($event)"></app-selectable-label>
     </div>
     <div class="col-8">
       <app-selector label="FLAPS" [useValue]="false" [toggleOptions]="['0','10','25','40']" [initialValue]="0"
@@ -116,7 +117,7 @@
   <!-- LANDING GEAR -->
   <div class="row align-items-center">
     <div class="col-4">
-      <h5 class="text-center">LANDING GEAR</h5>
+      <app-selectable-label label="LANDING GEAR" lookupValue="gear" (contentClicked)="labelSelected($event)"></app-selectable-label>
     </div>
     <div class="col-8">
       <app-selector label="LANDING GEAR" [useValue]="true" [toggleOptions]="['UP','DOWN']" [initialValue]="0"
