--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -7,7 +7,8 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col">
-        <h1 class="text-center">DATA</h1>
+        <h2 class="text-center">DATA</h2>
+        <hr>
       </div>
     </div>
     <div class="row">
@@ -54,11 +55,7 @@
 <!-- ----------------  -->
 <!--    DESCRIPTION    -->
 <!-- ----------------  -->
-<div class="panel description">
-
-  <div [innerHTML]="content"></div>
-
-</div>
+<div class="panel description" [innerHTML]="content"></div>
 
 <!-- ----------------  -->
 <!--    LOGO           -->
