Adds basic functions to SEP view

--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -49,7 +49,7 @@
 <!--    CONTROL        -->
 <!-- ----------------  -->
 <div class="panel control">
-  <app-control-factors title="CONTROL FACTORS" [disablePower]="false" (controlOutput)="valueChanged($event)" (labelOutput)="labelSelected($event)"></app-control-factors>
+  <app-control-factors title="CONTROL FACTORS" [disablePower]="false" (controlOutput)="onValueChanged($event)" (labelOutput)="labelSelected($event)"></app-control-factors>
 </div>
 
 <!-- ----------------  -->
