Refactors control factors panel to be extendable for each view that uses it. ControlFactorsComponent is inheritable to child components. Adds sep specific text to display.

--- a/src/app/ui/views/view-sep/view-sep.component.html
+++ b/src/app/ui/views/view-sep/view-sep.component.html
@@ -83,7 +83,7 @@
 <!--  CONTROL         -->
 <!-- ---------------- -->
 <div class="panel control">
-  <app-control-factors title="PERFORMANCE FACTORS" [disablePower]="true" (controlOutput)="onValueChanged($event)" (labelOutput)="onLabelSelected($event)"></app-control-factors>
+  <app-sep-control-factors title="PERFORMANCE FACTORS" [disablePower]="true" (controlOutput)="onValueChanged($event)" (labelOutput)="onLabelSelected($event)"></app-sep-control-factors>
 </div>
 
 <!-- ---------------- -->
