--- a/src/app/ui/views/view-sep/view-sep.component.html
+++ b/src/app/ui/views/view-sep/view-sep.component.html
@@ -28,7 +28,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <h1 class="text-center">21 HP</h1>
+        <h1 class="text-center">{{excessThp}} HP</h1>
       </div>
     </div>
 
@@ -39,7 +39,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <h1 class="text-center">170 FPM</h1>
+        <h1 class="text-center">{{roc}} FPM</h1>
       </div>
     </div>
 
@@ -50,7 +50,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <h1 class="text-center">5700 FT. MSL</h1>
+        <h1 class="text-center">{{serviceCeiling}} FT. MSL</h1>
       </div>
     </div>
 
@@ -61,7 +61,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <h1 class="text-center">6281 FT. MSL</h1>
+        <h1 class="text-center">{{absoluteCeiling}} FT. MSL</h1>
       </div>
     </div>
 
