--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -45,6 +45,10 @@
   <app-engine></app-engine>
 </div>
 
+<div class="overlay">
+  <app-rudder-effectiveness (labelSelected)="labelSelected($event)" [rudderEffectiveness]="rudderEffectiveness"></app-rudder-effectiveness>
+</div>
+
 <!-- ----------------  -->
 <!--    CONTROL        -->
 <!-- ----------------  -->
