Fix loading bar

--- a/src/app/ui/ui.component.scss
+++ b/src/app/ui/ui.component.scss
@@ -47,3 +47,12 @@
 .row.control {
   margin-top: 20px;
 }
+
+.center {
+  display:flex;
+  justify-content: center;
+  align-items:center;
+  margin: auto;
+  height:100%;
+  width:80%;
+}
