--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -3,5 +3,7 @@
   <router-outlet></router-outlet>
 </div>
 <ng-template #loadingWheel>
-  <h1>Loading...</h1>
+  <div class="center">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  </div>
 </ng-template>
