Adds simple title manager service.

--- a/src/app/ui/nav-bar/nav-bar.component.html
+++ b/src/app/ui/nav-bar/nav-bar.component.html
@@ -2,6 +2,8 @@
   <a routerLink="/">
     <h1 class="title">One Engine Inoperative Aerodynamics</h1>
   </a>
+  <span class="space"></span>
+  <h3>{{viewManagerService.currentView}}</h3>
   <span class="fill-middle"></span>
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu" xPosition="after">
