--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,8 +1,74 @@
 // define 3 theme color
 // mat-palette accepts $palette-name, main, lighter and darker variants
-$app-primary: mat-palette($mat-red); //, 700, 300, 900);
-$app-accent: mat-palette($mat-red, A200, A100, A700);
-$app-warn: mat-palette($mat-red);
+$md-undprimary: (
+    50 : #e0f3e9,
+    100 : #b3e1c7,
+    200 : #80cda2,
+    300 : #4db87c,
+    400 : #26a960,
+    500 : #009a44,
+    600 : #00923e,
+    700 : #008835,
+    800 : #007e2d,
+    900 : #006c1f,
+    A100 : #9cffaf,
+    A200 : #69ff86,
+    A400 : #36ff5d,
+    A700 : #1cff48,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$md-undwarn: (
+    50 : #ffede4,
+    100 : #ffd1bc,
+    200 : #ffb38f,
+    300 : #ff9562,
+    400 : #ff7e41,
+    500 : #ff671f,
+    600 : #ff5f1b,
+    700 : #ff5417,
+    800 : #ff4a12,
+    900 : #ff390a,
+    A100 : #ffffff,
+    A200 : #fff6f5,
+    A400 : #ffcbc2,
+    A700 : #ffb5a8,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$app-primary: mat-palette($md-undprimary, 500, 300, 900); //, 700, 300, 900);
+$app-accent: mat-palette($mat-red);
+$app-warn: mat-palette($md-undwarn, 500, 300, 900);
 
 $app-theme: mat-dark-theme(
   $app-primary,
