Reworking display text

--- a/src/app/ui/controls/selectable-label/selectable-label.component.html
+++ b/src/app/ui/controls/selectable-label/selectable-label.component.html
@@ -3,6 +3,6 @@
   <h5 class="text-center" (click)="onClick()">{{label}}</h5>
 </div>
 <ng-template #elseBlock>
-  <h2 class="text-center" (click)="onClick()">{{label}}</h2>
+  <h2  (click)="onClick()">{{label}}</h2>
 </ng-template>
 
