--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -17,8 +17,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        <h1 class="text-center">{{ stallSpeed }} KIAS</h1>
+      <div class="data-display col">
+        <h1 class="dynamic">{{ stallSpeed }}</h1>
+        <h2 class="static">KIAS</h2>
       </div>
     </div>
     <div class="row">
@@ -27,8 +28,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        <h1 class="text-center">{{ vmca }} KIAS</h1>
+      <div class="data-display col">
+        <h1 class="dynamic">{{ vmca }}</h1>
+        <h2 class="static">KIAS</h2>
       </div>
     </div>
     <div class="footnote">
