--- a/src/app/ui/views/view-sep/view-sep.component.html
+++ b/src/app/ui/views/view-sep/view-sep.component.html
@@ -16,8 +16,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        <h1 class="text-center">88 KIAS</h1>
+      <div class="data-display col">
+        <h1 class="dynamic">88</h1>
+        <h2 class="static">KIAS</h2>
       </div>
     </div>
 
@@ -27,8 +28,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        <h1 class="text-center">{{excessThp}} HP</h1>
+      <div class="data-display col">
+        <h1 class="dynamic">{{excessThp}}</h1>
+        <h2 class="static">HP</h2>
       </div>
     </div>
 
@@ -38,8 +40,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        <h1 class="text-center">{{roc}} FPM</h1>
+      <div class="data-display col">
+        <h1 class="dynamic">{{roc}}</h1>
+        <h2 class="static">FPM</h2>
       </div>
     </div>
 
@@ -49,8 +52,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        <h1 class="text-center">{{serviceCeiling}} FT. MSL</h1>
+      <div class="data-display col">
+        <h1 class="dynamic">{{serviceCeiling}}</h1>
+        <h2 class="static">FT. MSL</h2>
       </div>
     </div>
 
@@ -60,8 +64,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        <h1 class="text-center">{{absoluteCeiling}} FT. MSL</h1>
+      <div class="data-display col">
+        <h1 class="dynamic">{{absoluteCeiling}}</h1>
+        <h2 class="static">FT. MSL</h2>
       </div>
     </div>
 
