main menu tweak.

--- a/src/app/ui/views/view-menu/view-menu.component.html
+++ b/src/app/ui/views/view-menu/view-menu.component.html
@@ -1,10 +1,11 @@
 <div class="container-fluid">
   <div class="row h-25">
     <div class="col my-auto">
-      <h4 class="w-75 mx-auto text-center">
+      <h4 class="w-75 mx-auto add-margins text-center">
         This software uses interactive simulations to illustrate one engine inoperative aerodynamics. The simulations are
         loosely based on the Piper Seminole, a light twin commonly used in multiengine instruction.
       </h4>
+      <br/>
     </div>
   </div>
   <div class="container h-75">
